export const snapshot = {};

snapshot[`build a site with nunjucks 1`] = `5`;

snapshot[`build a site with nunjucks 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
  ],
}
`;

snapshot[`build a site with nunjucks 3`] = `
{
  content: '<!DOCTYPE html>\\n\\n<html lang="en">\\n  <head>\\n    <meta charset="utf-8">\\n    <title></title>\\n  </head>\\n  <body>\\n    <main><button class="" type="button">button content</button>\\n<icon name="John">\\n  this is John\\n</icon>\\n\\n\\n<button class="my-button" type="button">\\n  button content\\n\\n  <icon name="John">\\n  \\n  this is John\\n  \\n</icon>\\n\\n</button>\\n</main>\\n  </body>\\n</html>\\n',
  data: {
    comp: true,
    content: '{{ comp.Button({ content: "button content" }) | safe }}\\n{{ comp.icon.User({ content: "this is John", name:"John" }) | safe }}\\n\\n{% comp "Button", className="my-button" %}\\n  button content\\n\\n  {% comp "icon.user", name="John" %}\\n  this is John\\n  {% endcomp %}\\n{% endcomp %}\\n',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/components/",
  },
  dest: {
    ext: ".html",
    path: "/components/index",
  },
  src: {
    ext: ".njk",
    path: "/components",
  },
}
`;

snapshot[`build a site with nunjucks 4`] = `
{
  content: '\\n["red","green","blue"]\\n',
  data: {
    colors: [
      "red",
      "green",
      "blue",
    ],
    comp: true,
    content: "\\n{{ colors | dump | safe }}\\n",
    date: 1970-01-01T00:00:00.000Z,
    layout: null,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/data.json",
  },
  dest: {
    ext: ".json",
    path: "/data",
  },
  src: {
    ext: ".njk",
    path: "/data.json",
  },
}
`;

snapshot[`build a site with nunjucks 5`] = `
{
  content: '<!DOCTYPE html>\\n\\n<html lang="en">\\n  <head>\\n    <meta charset="utf-8">\\n    <title>Hello World</title>\\n  </head>\\n  <body>\\n    <main>\\n<h1>Hello World</h1>\\n</main>\\n  </body>\\n</html>\\n',
  data: {
    comp: true,
    content: "\\n<h1>{{ title }}</h1>\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Hello World",
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    ext: ".njk",
    path: "/index",
  },
}
`;

snapshot[`build a site with nunjucks 6`] = `
{
  content: '<!DOCTYPE html>\\n\\n<html lang="en">\\n  <head>\\n    <meta charset="utf-8">\\n    <title>njk filter example</title>\\n  </head>\\n  <body>\\n    <main><h1>NJK FILTER EXAMPLE</h1></main>\\n  </body>\\n</html>\\n',
  data: {
    comp: true,
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "njk filter example",
    url: "/njk-filter/",
  },
  dest: {
    ext: ".html",
    path: "/njk-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/njk-filter",
  },
}
`;

snapshot[`build a site with nunjucks 7`] = `
{
  content: '<!DOCTYPE html>\\n\\n<html lang="en">\\n  <head>\\n    <meta charset="utf-8">\\n    <title>The title</title>\\n  </head>\\n  <body>\\n    <main><p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<p><strong>THE TITLE</strong></p>\\n<div>hello (async)</div>\\n\\n<ul>\\n  <li>This is a partial</li>\\n  <li>async helper in a partial (async)</li>\\n</ul>\\n<ul>\\n  <li>This is a partial</li>\\n  <li>async helper in a partial (async)</li>\\n</ul>\\n</main>\\n  </body>\\n</html>\\n',
  data: {
    comp: true,
    content: '<p>{% upperCase title %}</p>\\n<p>{% upperCase "The title" %}</p>\\n<p>{% upperCaseAsync title %}</p>\\n<p>{% upperCaseAsync "The title" %}</p>\\n<p>{% upperCaseBody %}The title{% endupperCaseBody %}</p>\\n<p>{% upperCaseBody %}{{ title }}{% endupperCaseBody %}</p>\\n<p>{% upperCaseBodyAsync %}The title{% endupperCaseBodyAsync %}</p>\\n<p>{% upperCaseBodyAsync %}{{ title }}{% endupperCaseBodyAsync %}</p>\\n<div>{{ "hello" | returnAsync }}</div>\\n\\n{% include "partial.njk" %}\\n{% include "./_includes/partial.njk" %}\\n',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "The title",
    url: "/with-helpers/",
  },
  dest: {
    ext: ".html",
    path: "/with-helpers/index",
  },
  src: {
    ext: ".njk",
    path: "/with-helpers",
  },
}
`;
